# drama-buddy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx-tv.conf  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: AGENTS.md  index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  screenshot.rs
apps/desktop/src/components/: FloatingWidget.css  FloatingWidget.tsx
apps/desktop/src/styles/: global.css
apps/server/: .env.example  AGENTS.md  jest.config.js  package.json  tsconfig.json
apps/server/src/__tests__/: knowledge.test.ts  pet-engine.test.ts  prompt-builder.test.ts
apps/server/src/app/: page.tsx
apps/server/src/lib/: ai-client.ts  prompt-builder.ts
apps/tv/: .env.example  AGENTS.md  build-android.sh  index.html  package.json  vite.config.ts
apps/tv/android/app/: build.gradle
apps/tv/public/: manifest.json  sw.js
apps/tv/src/: App.tsx  main.tsx
apps/tv/src/components/: ChatPanel.css  ChatPanel.tsx  DramaSetup.css  DramaSetup.tsx  InstallPrompt.css  InstallPrompt.tsx  QuickActions.css  QuickActions.tsx  StatusBar.css  StatusBar.tsx  VoiceIndicator.css  VoiceIndicator.tsx
e2e/: api.spec.ts  tv-app.spec.ts
(+29 files in other folders)
