[package]
name = "drama-buddy-desktop"
version = "0.1.0"
description = "Drama Buddy - AI companion for watching shows"
authors = ["Drama Buddy Team"]
edition = "2021"

[lib]
name = "drama_buddy_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
